--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,19 @@
   font-size: 22px;
   width: 200px;
   height: 500px;
+  margin-left: 20px;
 }
 
 .band-pic {
   float:left;
+}
+
+.text {
+  border: 2px solid darkorange;
+  padding: 20px;
+  margin: 20px;
+}
+
+img {
+  padding: 20px;
 }
